<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/final_score"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@id/team1_endgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/team_1"
        android:layout_below="@+id/Final_score"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@id/team2_endgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/team_2"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@id/score1_endgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/zero"
        android:layout_below="@id/team1_endgame"
        android:layout_alignLeft="@id/team1_endgame"
        android:layout_alignStart="@id/team1_endgame"
        android:layout_marginLeft="23dp" />

    <TextView
        android:id="@id/score2_endgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/zero"
        android:layout_alignBaseline="@id/score1_endgame"
        android:layout_alignBottom="@id/score1_endgame"
        android:layout_alignRight="@id/team2_endgame"
        android:layout_alignEnd="@id/team2_endgame"
        android:layout_marginRight="23dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@id/score1_endgame"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@id/duration_endgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@id/score2_endgame"
        android:layout_centerHorizontal="true"
        android:hint="@string/_00_00" />

    <Button
        android:id="@id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/OK" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@id/phonenumb_text"
        android:layout_below="@id/score1_endgame"
        android:layout_marginTop="128dp"
        android:layout_toLeftOf="@id/sendSMS_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone_number"
        android:id="@id/phonenumber_textview"
        android:layout_above="@id/sendSMS_button"
        android:layout_toLeftOf="@id/sendSMS_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@id/sendSMS_button"
        android:src="@android:drawable/sym_action_email"
        android:layout_alignBottom="@id/phonenumb_text"
        android:layout_alignRight="@id/team2_endgame"
        android:layout_alignEnd="@id/team2_endgame" />

</RelativeLayout>
