<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pause_icon"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/team1_score"
        android:layout_alignEnd="@+id/team1_score" />

    <NumberPicker
        android:id="@+id/team2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/team1_score" />

    <NumberPicker
        android:id="@+id/team1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/end_game_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/team2_score"
        android:layout_alignEnd="@+id/team2_score"
        android:layout_toRightOf="@+id/chronometer1" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_icon"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/team2_score"
        android:layout_alignStart="@+id/team2_score" />

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/match_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/team_1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:capitalize="words"
        android:layout_above="@+id/team1_score" />

    <TextView
        android:id="@+id/match_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/team_2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25dp"
        android:layout_alignTop="@+id/match_team1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:capitalize="words" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@id/Sport"
        android:hint="Sport"
        android:textSize="30dp"
        android:layout_alignTop="@+id/team1_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@id/cancel_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/chronometer1" />

</RelativeLayout>